--- a/exampleonnet/guava_learn_note/Guava_Objects./.project
+++ b/exampleonnet/guava_learn_note/Guava_Objects./.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Guava学习笔记：复写的Object常用方法</name>
+	<name>04、Guava学习笔记：复写的Object常用方法</name>
 	<comment></comment>
 	<projects>
 	</projects>
