--- a/exampleonnet/guava_learn_note/Guava_Throwables/.project
+++ b/exampleonnet/guava_learn_note/Guava_Throwables/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Guava学习笔记：简化异常处理的Throwables类</name>
+	<name>05、Guava学习笔记：简化异常处理的Throwables类</name>
 	<comment></comment>
 	<projects>
 	</projects>
