--- a/exampleonnet/guava_learn_note/Guava/.project
+++ b/exampleonnet/guava_learn_note/Guava/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>03、Guava学习笔记：Preconditions优雅的检验参数</name>
+	<name>00、Guava学习笔记目录</name>
 	<comment></comment>
 	<projects>
 	</projects>
